--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "tailwindcss": "pnpm exec tailwindcss build -i src/css/index.css -o src/css/tailwind.css --watch",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "bump-dependencies": "ncu -u && pnpm i"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
-    "@tauri-apps/cli": "^1.2.2"
+    "@tauri-apps/cli": "^1.2.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
