Fixes and adds: - Switching to lofty - Adding volume bar - Making sound progress bar functional - Adding temporary pages for the different menus

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,23 @@
     },
     "rules": {
         "prettier/prettier": "error",
-        "no-param-reassign": "off"
+        "no-param-reassign": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never"
+            }
+        ]
+    },
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".ts", ".tsx"]
+            }
+        }
     }
 }
