--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -46,7 +46,7 @@ tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-works
 tokio = { version = "1.23.0", default-features = false, features = ["rt-multi-thread", "time", "macros"] }
 diesel = { version = "2.0.3", features = ["libsqlite3-sys", "serde_json", "r2d2", "sqlite"] }
 uuid = { version = "1.2.1", default-features = false, features = ["v4", "fast-rng"] }
-tauri = { version = "1.2.4", features = ["fs-read-file", "protocol-asset", "window-all"] }
+tauri = { version = "1.2.4", features = ["dialog-all", "fs-read-file", "protocol-asset", "window-all"] }
 serde = { version = "1.0", features = ["derive"] }
 diesel_migrations = "2.0.0"
 env_logger = "0.10.0"
