Add system tray

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,21 +43,23 @@ tauri-build = { version = "1.2.1", features = [] }
 
 [dependencies]
 tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0" }
-tokio = { version = "1.23.0", default-features = false, features = ["rt-multi-thread", "time", "macros"] }
+tauri = { version = "1.2.4", features = ["dialog-all", "fs-read-file", "protocol-asset", "system-tray", "window-all"] }
+tokio = { version = "1.25.0", default-features = false, features = ["rt-multi-thread", "time", "macros"] }
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/tauri-plugin-single-instance/" }
 diesel = { version = "2.0.3", features = ["libsqlite3-sys", "serde_json", "r2d2", "sqlite"] }
-uuid = { version = "1.2.1", default-features = false, features = ["v4", "fast-rng"] }
-tauri = { version = "1.2.4", features = ["dialog-all", "fs-read-file", "protocol-asset", "window-all"] }
+uuid = { version = "1.3.0", default-features = false, features = ["v4", "fast-rng"] }
 serde = { version = "1.0", features = ["derive"] }
 diesel_migrations = "2.0.0"
 env_logger = "0.10.0"
-serde_json = "1.0"
+serde_json = "1.0.93"
 chrono = "0.4.22"
 walkdir = "2.3.2"
 base64 = "0.21.0"
-lofty = "0.10.0"
+lofty = "0.11.0"
 r2d2 = "0.8.10"
 dirs = "4.0.0"
 kira = "0.7.1"
+open = "3.2.0"
 log = "0.4"
 
 [features]
